cleaning and more tests but not fully ok